@@ -11,6 +11,7 @@ Option added to export max number listings per csv file to fix out of memory iss
 Body classes added to GD pages for each page - ADDED
 The recent reviews widget ignores 1 star reviews - FIXED
 Added ability to show upgrade warning messages for major changes - ADDED
+Multiselect custom field "Display Type" option doesn't save on first attempt - FIXED
 
 v1.5.5
 Added charset parameter to case conversion functions - ADDED
